@startuml
abstract class parser.Abstract.Parser {
- List<String> lines
+ List<T> parse()
# {abstract}T parseSingle(String)
}
class ui.SearchBar {
- JTextField searchField
+ JTextField getSearchField()
}
class parser.Town.TownParser {
# Town parseSingle(String)
}
class ui.Abstract.ListItemPanel {
- Dimension buttonSize
+ Dimension getButtonSize()
}
class ui.PokeLabel {
+ void setFontSize(int)
}
abstract class ui.Abstract.ItemListPanel {
+ {abstract}JPanel createListItem(T,int,int,int,int,String,MouseListener)
}
class parser.Misc.Misc {
- String description
+ String getDescription()
}
class util.Utility {
+ {static} ImageIcon makeIcon(int,int,String)
+ {static} void resizeIcon(ImageIcon,int,int)
+ {static} String idToString(int)
+ {static} String getImagePath(String,int)
}
class ui.Town.TownDisplayPanel {
- PokeLabel population
- PokeDescription description
+ void update(Town)
}
class ui.PokeButton {
+ void setSize(Dimension)
}
class parser.Pokemon.Pokemon {
- PokemonType type1
- PokemonType type2
- String description
+ PokemonType getType1()
+ PokemonType getType2()
+ String getDescription()
}
abstract class ui.Abstract.DisplayPanel {
# PokeLabel name
# PokeIcon icon
# int imageWidth
# int imageHeight
# String imageDir
# Dimension buttonSize
+ {abstract}void update(T)
}
class parser.Pokemon.PokemonParser {
- PokemonType stringToPokemonType(String)
# Pokemon parseSingle(String)
}
class ui.Pokemon.PokemonTypeLabel {
+ void setPokeType(PokemonType)
}
class ui.PokeDescription {
}
class Pokedex {
+ {static} void main(String[])
}
class parser.Misc.MiscParser {
# Misc parseSingle(String)
}
class ui.PokedexFrame {
- CardLayout cardLayout
- JPanel cards
- PokemonPanel pokemonPanel
- TownPanel townPanel
- MiscPanel miscPanel
+ void toMainMenu()
+ void actionPerformed(ActionEvent)
}
class ui.AlignedPokeButton {
}
class ui.Pokemon.PokemonDisplayPanel {
- PokemonTypeLabel type1
- PokemonTypeLabel type2
- JTextArea description
+ void update(Pokemon)
}
enum parser.Pokemon.PokemonType {
+  BUG
+  DARK
+  DRAGON
+  ELECTRIC
+  FAIRY
+  FIGHTING
+  FIRE
+  FLIGHT
+  GHOST
+  GRASS
+  GROUND
+  ICE
+  NONE
+  NORMAL
+  POISON
+  PSYCHIC
+  ROCK
+  STEEL
+  WATER
+ int toColor()
}
class ui.Town.TownPanel {
}
class ui.Pokemon.PokemonPanel {
}
class ui.Misc.MiscPanel {
}
abstract class parser.Abstract.Item {
# int id
# String name
+ int getId()
+ void setId(int)
+ String getName()
+ void setName(String)
}
class ui.Town.PopulationLabel {
}
class ui.PokeIconButton {
}
class parser.Town.Town {
- int population
- String description
+ int getPopulation()
+ String getDescription()
}
abstract class ui.Abstract.TypePanel {
# List<T> list
- PokedexFrame pokedexFrame
# CardLayout cardLayout
# DisplayPanel<T> displayPanel
# int currentItem
# int imageWidth
# int imageHeight
# String imageDir
+ void actionPerformed(ActionEvent)
# void search(String)
+ void mouseClicked(MouseEvent)
+ void mousePressed(MouseEvent)
+ void mouseReleased(MouseEvent)
+ void mouseEntered(MouseEvent)
+ void mouseExited(MouseEvent)
}
class ui.Town.TownListPanel {
+ JPanel createListItem(Town,int,int,int,int,String,MouseListener)
}
class ui.Pokemon.PokemonListPanel {
+ JPanel createListItem(Pokemon,int,int,int,int,String,MouseListener)
}
class ui.Misc.MiscDisplayPanel {
- PokeDescription description
+ void update(Misc)
}
class ui.Misc.MiscListPanel {
+ JPanel createListItem(Misc,int,int,int,int,String,MouseListener)
}
class ui.PokeIcon {
}


ui.JPanel <|-- ui.SearchBar
parser.Abstract.Parser <|-- parser.Town.TownParser
ui.Abstract.JPanel <|-- ui.Abstract.ListItemPanel
ui.JLabel <|-- ui.PokeLabel
ui.Abstract.JPanel <|-- ui.Abstract.ItemListPanel
parser.Abstract.Item <|-- parser.Misc.Misc
ui.Abstract.DisplayPanel <|-- ui.Town.TownDisplayPanel
ui.JButton <|-- ui.PokeButton
parser.Abstract.Item <|-- parser.Pokemon.Pokemon
ui.Abstract.JPanel <|-- ui.Abstract.DisplayPanel
parser.Abstract.Parser <|-- parser.Pokemon.PokemonParser
ui.PokeLabel <|-- ui.Pokemon.PokemonTypeLabel
ui.JTextArea <|-- ui.PokeDescription
parser.Abstract.Parser <|-- parser.Misc.MiscParser
java.awt.event.ActionListener <|.. ui.PokedexFrame
ui.JFrame <|-- ui.PokedexFrame
ui.PokeButton <|-- ui.AlignedPokeButton
ui.Abstract.DisplayPanel <|-- ui.Pokemon.PokemonDisplayPanel
ui.Abstract.TypePanel <|-- ui.Town.TownPanel
ui.Abstract.TypePanel <|-- ui.Pokemon.PokemonPanel
ui.Abstract.TypePanel <|-- ui.Misc.MiscPanel
ui.PokeLabel <|-- ui.Town.PopulationLabel
ui.JButton <|-- ui.PokeIconButton
parser.Abstract.Item <|-- parser.Town.Town
java.awt.event.ActionListener <|.. ui.Abstract.TypePanel
java.awt.event.MouseListener <|.. ui.Abstract.TypePanel
ui.Abstract.JPanel <|-- ui.Abstract.TypePanel
ui.Abstract.ItemListPanel <|-- ui.Town.TownListPanel
ui.Abstract.ItemListPanel <|-- ui.Pokemon.PokemonListPanel
ui.Abstract.DisplayPanel <|-- ui.Misc.MiscDisplayPanel
ui.Abstract.ItemListPanel <|-- ui.Misc.MiscListPanel
ui.JLabel <|-- ui.PokeIcon
@enduml